--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <button value=10 id="y">y thooo</button>
     <button value=1 id="y">impossible</button>
   </div>
+  <a href="./pong.html">Play Pong (kind of)!</a>
 
   <script>
   //draw board
