--- a/index.html
+++ b/index.html
@@ -155,16 +155,16 @@
     }
   }
 
-  var waiting = [];
-  
+  var waiting = 0;
+
   var checkEaten = function () {
     if(waiting.length>0) {
       bodyArr = bodyArr.slice(0, bodyArr.length);
-      waiting.pop();
+      waiting += -1;
     } else {
       if(bodyArr[0][0] === dot[0] && bodyArr[0][1] === dot[1]) {
         updateDot();
-        waiting = [1,2,3];
+        waiting = 5;
         bodyArr = bodyArr.slice(0, bodyArr.length);
         score += Math.floor(2000/speed);
         document.getElementById("score").innerHTML = score;
