modify html to include theme

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+---
+title: Portfolio
+---
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-11-22 Sun 17:55 -->
+<!-- 2020-11-22 Sun 17:57 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Portfolio</title>
@@ -223,34 +226,34 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org8219c55">1. Indoor Automated Garden</a></li>
-<li><a href="#org3d5c056">2. Linux RICE Github</a>
+<li><a href="#org3dd2df5">1. Indoor Automated Garden</a></li>
+<li><a href="#org8884f26">2. Linux RICE Github</a>
 <ul>
-<li><a href="#orgb0373bc">2.1. Overview</a></li>
-<li><a href="#orgd320877">2.2. Custom scripts</a>
+<li><a href="#org9889433">2.1. Overview</a></li>
+<li><a href="#org61b2b9b">2.2. Custom scripts</a>
 <ul>
-<li><a href="#org5103e16">2.2.1. Internationalization</a></li>
-<li><a href="#org11e38aa">2.2.2. Backups</a></li>
-<li><a href="#orgc467216">2.2.3. Reproducible builds</a></li>
+<li><a href="#orgc540901">2.2.1. Internationalization</a></li>
+<li><a href="#orgef13ba6">2.2.2. Backups</a></li>
+<li><a href="#org1ccd4bc">2.2.3. Reproducible builds</a></li>
 </ul>
 </li>
 </ul>
 </li>
-<li><a href="#orgb9b0b75">3. Open Source Coding Projects</a>
+<li><a href="#orga1ac277">3. Open Source Coding Projects</a>
 <ul>
-<li><a href="#org0f1867e">3.1. Search Within Video Github Website</a></li>
-<li><a href="#org99e04a7">3.2. Ray Tracer Github</a></li>
-<li><a href="#org8b9b6ab">3.3. Steganographic Encoder Github</a></li>
+<li><a href="#org02efe08">3.1. Search Within Video Github Website</a></li>
+<li><a href="#org886b780">3.2. Ray Tracer Github</a></li>
+<li><a href="#org46ed81e">3.3. Steganographic Encoder Github</a></li>
 </ul>
 </li>
-<li><a href="#org76e0046">4. Emacs Build Github</a>
+<li><a href="#orgb0626e9">4. Emacs Build Github</a>
 <ul>
-<li><a href="#orgadae2f4">4.1. Measuring startup time</a></li>
-<li><a href="#org0e850a4">4.2. Emacs as window manager</a></li>
-<li><a href="#orgcb6fb47">4.3. Latex dev environment and resume</a></li>
+<li><a href="#org8572c69">4.1. Measuring startup time</a></li>
+<li><a href="#orgef1c3a1">4.2. Emacs as window manager</a></li>
+<li><a href="#org07f9924">4.3. Latex dev environment and resume</a></li>
 </ul>
 </li>
-<li><a href="#org6fb3930">5. Ginger Beer</a></li>
+<li><a href="#orgd737b7c">5. Ginger Beer</a></li>
 </ul>
 </div>
 </div>
@@ -260,79 +263,79 @@ title: Portfolio
 &#x2014;
 </p>
 
-<div id="outline-container-org8219c55" class="outline-2">
-<h2 id="org8219c55"><span class="section-number-2">1</span> Indoor Automated Garden</h2>
+<div id="outline-container-org3dd2df5" class="outline-2">
+<h2 id="org3dd2df5"><span class="section-number-2">1</span> Indoor Automated Garden</h2>
 </div>
 
-<div id="outline-container-org3d5c056" class="outline-2">
-<h2 id="org3d5c056"><span class="section-number-2">2</span> Linux RICE <a href="https://github.com/bcmertz/dotfiles">Github</a></h2>
+<div id="outline-container-org8884f26" class="outline-2">
+<h2 id="org8884f26"><span class="section-number-2">2</span> Linux RICE <a href="https://github.com/bcmertz/dotfiles">Github</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 I run an Arch Linux with a completely customized userspace that has tight integration between emacs, terminal, and various unix  utilities
 </p>
 </div>
-<div id="outline-container-orgb0373bc" class="outline-3">
-<h3 id="orgb0373bc"><span class="section-number-3">2.1</span> Overview</h3>
+<div id="outline-container-org9889433" class="outline-3">
+<h3 id="org9889433"><span class="section-number-3">2.1</span> Overview</h3>
 </div>
-<div id="outline-container-orgd320877" class="outline-3">
-<h3 id="orgd320877"><span class="section-number-3">2.2</span> Custom scripts</h3>
+<div id="outline-container-org61b2b9b" class="outline-3">
+<h3 id="org61b2b9b"><span class="section-number-3">2.2</span> Custom scripts</h3>
 <div class="outline-text-3" id="text-2-2">
 </div>
-<div id="outline-container-org5103e16" class="outline-4">
-<h4 id="org5103e16"><span class="section-number-4">2.2.1</span> Internationalization</h4>
+<div id="outline-container-orgc540901" class="outline-4">
+<h4 id="orgc540901"><span class="section-number-4">2.2.1</span> Internationalization</h4>
 </div>
-<div id="outline-container-org11e38aa" class="outline-4">
-<h4 id="org11e38aa"><span class="section-number-4">2.2.2</span> Backups</h4>
+<div id="outline-container-orgef13ba6" class="outline-4">
+<h4 id="orgef13ba6"><span class="section-number-4">2.2.2</span> Backups</h4>
 </div>
-<div id="outline-container-orgc467216" class="outline-4">
-<h4 id="orgc467216"><span class="section-number-4">2.2.3</span> Reproducible builds</h4>
+<div id="outline-container-org1ccd4bc" class="outline-4">
+<h4 id="org1ccd4bc"><span class="section-number-4">2.2.3</span> Reproducible builds</h4>
 </div>
 </div>
 </div>
 
 
-<div id="outline-container-orgb9b0b75" class="outline-2">
-<h2 id="orgb9b0b75"><span class="section-number-2">3</span> Open Source Coding Projects</h2>
+<div id="outline-container-orga1ac277" class="outline-2">
+<h2 id="orga1ac277"><span class="section-number-2">3</span> Open Source Coding Projects</h2>
 <div class="outline-text-2" id="text-3">
 </div>
-<div id="outline-container-org0f1867e" class="outline-3">
-<h3 id="org0f1867e"><span class="section-number-3">3.1</span> Search Within Video <a href="https://github.com/bcmertz/videosearch">Github</a> <a href="http://www.searchwithinvideo.com/">Website</a></h3>
+<div id="outline-container-org02efe08" class="outline-3">
+<h3 id="org02efe08"><span class="section-number-3">3.1</span> Search Within Video <a href="https://github.com/bcmertz/videosearch">Github</a> <a href="http://www.searchwithinvideo.com/">Website</a></h3>
 </div>
-<div id="outline-container-org99e04a7" class="outline-3">
-<h3 id="org99e04a7"><span class="section-number-3">3.2</span> Ray Tracer <a href="https://github.com/bcmertz/ray-tracer">Github</a></h3>
+<div id="outline-container-org886b780" class="outline-3">
+<h3 id="org886b780"><span class="section-number-3">3.2</span> Ray Tracer <a href="https://github.com/bcmertz/ray-tracer">Github</a></h3>
 </div>
-<div id="outline-container-org8b9b6ab" class="outline-3">
-<h3 id="org8b9b6ab"><span class="section-number-3">3.3</span> Steganographic Encoder <a href="https://github.com/bcmertz/steganographic-encoder">Github</a></h3>
+<div id="outline-container-org46ed81e" class="outline-3">
+<h3 id="org46ed81e"><span class="section-number-3">3.3</span> Steganographic Encoder <a href="https://github.com/bcmertz/steganographic-encoder">Github</a></h3>
 </div>
 </div>
 
 
-<div id="outline-container-org76e0046" class="outline-2">
-<h2 id="org76e0046"><span class="section-number-2">4</span> Emacs Build <a href="https://github.com/bcmertz/dotfiles/tree/master/.emacs.d">Github</a></h2>
+<div id="outline-container-orgb0626e9" class="outline-2">
+<h2 id="orgb0626e9"><span class="section-number-2">4</span> Emacs Build <a href="https://github.com/bcmertz/dotfiles/tree/master/.emacs.d">Github</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Emacs is the ideal extensible editor for all types of plain text, including code and latex. My custom build includes support for many useful tools including vim emulation, email, autocompletion, compilation, and many tweaks that make windowing inside of emacs work like it does in my window manager of choice i3.
 </p>
 </div>
-<div id="outline-container-orgadae2f4" class="outline-3">
-<h3 id="orgadae2f4"><span class="section-number-3">4.1</span> Measuring startup time</h3>
+<div id="outline-container-org8572c69" class="outline-3">
+<h3 id="org8572c69"><span class="section-number-3">4.1</span> Measuring startup time</h3>
 </div>
-<div id="outline-container-org0e850a4" class="outline-3">
-<h3 id="org0e850a4"><span class="section-number-3">4.2</span> Emacs as window manager</h3>
+<div id="outline-container-orgef1c3a1" class="outline-3">
+<h3 id="orgef1c3a1"><span class="section-number-3">4.2</span> Emacs as window manager</h3>
 </div>
-<div id="outline-container-orgcb6fb47" class="outline-3">
-<h3 id="orgcb6fb47"><span class="section-number-3">4.3</span> Latex dev environment and resume</h3>
+<div id="outline-container-org07f9924" class="outline-3">
+<h3 id="org07f9924"><span class="section-number-3">4.3</span> Latex dev environment and resume</h3>
 </div>
 </div>
 
 
-<div id="outline-container-org6fb3930" class="outline-2">
-<h2 id="org6fb3930"><span class="section-number-2">5</span> Ginger Beer</h2>
+<div id="outline-container-orgd737b7c" class="outline-2">
+<h2 id="orgd737b7c"><span class="section-number-2">5</span> Ginger Beer</h2>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Bennett Mertz</p>
-<p class="date">Created: 2020-11-22 Sun 17:55</p>
+<p class="date">Created: 2020-11-22 Sun 17:57</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
