--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-11-22 Sun 17:57 -->
+<!-- 2020-11-22 Sun 18:53 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Portfolio</title>
@@ -223,116 +223,148 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org3dd2df5">1. Indoor Automated Garden</a></li>
-<li><a href="#org8884f26">2. Linux RICE Github</a>
+<li><a href="#org233f035">1. Indoor Automated Garden</a></li>
+<li><a href="#org2a19ef7">2. Linux RICE (Github)</a>
 <ul>
-<li><a href="#org9889433">2.1. Overview</a></li>
-<li><a href="#org61b2b9b">2.2. Custom scripts</a>
+<li><a href="#org6eda929">2.1. Overview</a></li>
+<li><a href="#org5f4a255">2.2. Custom scripts</a>
 <ul>
-<li><a href="#orgc540901">2.2.1. Internationalization</a></li>
-<li><a href="#orgef13ba6">2.2.2. Backups</a></li>
-<li><a href="#org1ccd4bc">2.2.3. Reproducible builds</a></li>
+<li><a href="#org6866d96">2.2.1. Internationalization</a></li>
+<li><a href="#org2f287b0">2.2.2. Backups</a></li>
+<li><a href="#org31d7001">2.2.3. Reproducible builds</a></li>
 </ul>
 </li>
 </ul>
 </li>
-<li><a href="#orga1ac277">3. Open Source Coding Projects</a>
+<li><a href="#org515dd9a">3. Open Source Coding Projects</a>
 <ul>
-<li><a href="#org02efe08">3.1. Search Within Video Github Website</a></li>
-<li><a href="#org886b780">3.2. Ray Tracer Github</a></li>
-<li><a href="#org46ed81e">3.3. Steganographic Encoder Github</a></li>
+<li><a href="#org08dcc53">3.1. Search Within Video (Github Website)</a></li>
+<li><a href="#org696a1e5">3.2. Ray Tracer (Github)</a></li>
+<li><a href="#org5590150">3.3. Steganographic Encoder (Github)</a></li>
 </ul>
 </li>
-<li><a href="#orgb0626e9">4. Emacs Build Github</a>
+<li><a href="#orgcb8ae9f">4. Emacs Build (Github)</a>
 <ul>
-<li><a href="#org8572c69">4.1. Measuring startup time</a></li>
-<li><a href="#orgef1c3a1">4.2. Emacs as window manager</a></li>
-<li><a href="#org07f9924">4.3. Latex dev environment and resume</a></li>
+<li><a href="#orge69e870">4.1. Measuring startup time</a></li>
+<li><a href="#org2749d70">4.2. Emacs as window manager</a></li>
+<li><a href="#orgf721222">4.3. Org Mode</a></li>
+<li><a href="#orgd960b46">4.4. Latex dev environment and resume</a></li>
 </ul>
 </li>
-<li><a href="#orgd737b7c">5. Ginger Beer</a></li>
 </ul>
 </div>
 </div>
+
+<div id="outline-container-org233f035" class="outline-2">
+<h2 id="org233f035"><span class="section-number-2">1</span> Indoor Automated Garden</h2>
+<div class="outline-text-2" id="text-1">
 <p>
-&#x2014;
-title: Portfolio
-&#x2014;
+A year ago I my best friend's mom passed away. My friend had already moved out on her own, but wanted to hold onto her childhood apartment. So a year ago I moved into the Bronx after graduating from Recurse Center and college, so that she could keep her apartment in her name. I needed to reside in the city for my transgender services at Mount Sinai and brainstormed ways to create the garden of my dreams inside a northern exposure apartment in the middle of a food desert and green desert.
 </p>
-
-<div id="outline-container-org3dd2df5" class="outline-2">
-<h2 id="org3dd2df5"><span class="section-number-2">1</span> Indoor Automated Garden</h2>
+</div>
 </div>
 
-<div id="outline-container-org8884f26" class="outline-2">
-<h2 id="org8884f26"><span class="section-number-2">2</span> Linux RICE <a href="https://github.com/bcmertz/dotfiles">Github</a></h2>
+
+<div id="outline-container-org2a19ef7" class="outline-2">
+<h2 id="org2a19ef7"><span class="section-number-2">2</span> Linux RICE <a href="https://github.com/bcmertz/dotfiles">(Github)</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 I run an Arch Linux with a completely customized userspace that has tight integration between emacs, terminal, and various unix  utilities
 </p>
 </div>
-<div id="outline-container-org9889433" class="outline-3">
-<h3 id="org9889433"><span class="section-number-3">2.1</span> Overview</h3>
+<div id="outline-container-org6eda929" class="outline-3">
+<h3 id="org6eda929"><span class="section-number-3">2.1</span> Overview</h3>
 </div>
-<div id="outline-container-org61b2b9b" class="outline-3">
-<h3 id="org61b2b9b"><span class="section-number-3">2.2</span> Custom scripts</h3>
+<div id="outline-container-org5f4a255" class="outline-3">
+<h3 id="org5f4a255"><span class="section-number-3">2.2</span> Custom scripts</h3>
 <div class="outline-text-3" id="text-2-2">
 </div>
-<div id="outline-container-orgc540901" class="outline-4">
-<h4 id="orgc540901"><span class="section-number-4">2.2.1</span> Internationalization</h4>
+<div id="outline-container-org6866d96" class="outline-4">
+<h4 id="org6866d96"><span class="section-number-4">2.2.1</span> Internationalization</h4>
 </div>
-<div id="outline-container-orgef13ba6" class="outline-4">
-<h4 id="orgef13ba6"><span class="section-number-4">2.2.2</span> Backups</h4>
+<div id="outline-container-org2f287b0" class="outline-4">
+<h4 id="org2f287b0"><span class="section-number-4">2.2.2</span> Backups</h4>
 </div>
-<div id="outline-container-org1ccd4bc" class="outline-4">
-<h4 id="org1ccd4bc"><span class="section-number-4">2.2.3</span> Reproducible builds</h4>
+<div id="outline-container-org31d7001" class="outline-4">
+<h4 id="org31d7001"><span class="section-number-4">2.2.3</span> Reproducible builds</h4>
 </div>
 </div>
 </div>
 
-
-<div id="outline-container-orga1ac277" class="outline-2">
-<h2 id="orga1ac277"><span class="section-number-2">3</span> Open Source Coding Projects</h2>
+<div id="outline-container-org515dd9a" class="outline-2">
+<h2 id="org515dd9a"><span class="section-number-2">3</span> Open Source Coding Projects</h2>
 <div class="outline-text-2" id="text-3">
-</div>
-<div id="outline-container-org02efe08" class="outline-3">
-<h3 id="org02efe08"><span class="section-number-3">3.1</span> Search Within Video <a href="https://github.com/bcmertz/videosearch">Github</a> <a href="http://www.searchwithinvideo.com/">Website</a></h3>
-</div>
-<div id="outline-container-org886b780" class="outline-3">
-<h3 id="org886b780"><span class="section-number-3">3.2</span> Ray Tracer <a href="https://github.com/bcmertz/ray-tracer">Github</a></h3>
-</div>
-<div id="outline-container-org46ed81e" class="outline-3">
-<h3 id="org46ed81e"><span class="section-number-3">3.3</span> Steganographic Encoder <a href="https://github.com/bcmertz/steganographic-encoder">Github</a></h3>
-</div>
-</div>
-
-
-<div id="outline-container-orgb0626e9" class="outline-2">
-<h2 id="orgb0626e9"><span class="section-number-2">4</span> Emacs Build <a href="https://github.com/bcmertz/dotfiles/tree/master/.emacs.d">Github</a></h2>
-<div class="outline-text-2" id="text-4">
 <p>
-Emacs is the ideal extensible editor for all types of plain text, including code and latex. My custom build includes support for many useful tools including vim emulation, email, autocompletion, compilation, and many tweaks that make windowing inside of emacs work like it does in my window manager of choice i3.
+Open source is incredibly important to me, and I make every piece of software I write open souce and freely liscenced. Below are three of my favorite projects I've written over the last few years.
 </p>
 </div>
-<div id="outline-container-org8572c69" class="outline-3">
-<h3 id="org8572c69"><span class="section-number-3">4.1</span> Measuring startup time</h3>
-</div>
-<div id="outline-container-orgef1c3a1" class="outline-3">
-<h3 id="orgef1c3a1"><span class="section-number-3">4.2</span> Emacs as window manager</h3>
-</div>
-<div id="outline-container-org07f9924" class="outline-3">
-<h3 id="org07f9924"><span class="section-number-3">4.3</span> Latex dev environment and resume</h3>
-</div>
-</div>
+<div id="outline-container-org08dcc53" class="outline-3">
+<h3 id="org08dcc53"><span class="section-number-3">3.1</span> Search Within Video (<a href="https://github.com/bcmertz/videosearch">Github</a> <a href="http://www.searchwithinvideo.com/">Website</a>)</h3>
+<div class="outline-text-3" id="text-3-1">
+<p>
+Search Within Video allows you to upload a video or provide a youtube url that is downloaded and analyzed using OpenCV to see which frames are statistically most unique. These frames are then uploaded to an open source image classifier, and the results are returned to the user in the form of a searchable video. The user can search for an object such as "Dog" and the video will load the timestamp of any dog occurence.
+</p>
 
+<p>
+This project has a microservice architecture and runs the video parser and image classifier on a python backend and the webpage off a node server.
+</p>
+</div>
+</div>
+<div id="outline-container-org696a1e5" class="outline-3">
+<h3 id="org696a1e5"><span class="section-number-3">3.2</span> Ray Tracer (<a href="https://github.com/bcmertz/ray-tracer">Github</a>)</h3>
+</div>
+<div id="outline-container-org5590150" class="outline-3">
+<h3 id="org5590150"><span class="section-number-3">3.3</span> Steganographic Encoder (<a href="https://github.com/bcmertz/steganographic-encoder">Github</a>)</h3>
+</div>
+</div>
+<div id="outline-container-orgcb8ae9f" class="outline-2">
+<h2 id="orgcb8ae9f"><span class="section-number-2">4</span> Emacs Build (<a href="https://github.com/bcmertz/dotfiles/tree/master/.emacs.d">Github</a>)</h2>
+<div class="outline-text-2" id="text-4">
+<p>
+Emacs is the ideal extensible editor for all types of plain text, including code and latex. My custom build includes support for many useful tools including vim emulation, email, autocompletion, compilation, and many tweaks that make windowing inside of emacs work like it does in my window manager of choice i3. My custom build features 8 language configurations and 14 general purpose modules that configure everything from git support to editing
+</p>
+</div>
+<div id="outline-container-orge69e870" class="outline-3">
+<h3 id="orge69e870"><span class="section-number-3">4.1</span> Measuring startup time</h3>
+<div class="outline-text-3" id="text-4-1">
+<p>
+Startup performance of my custom build is monitored very closely. <a href="https://github.com/bcmertz/dotfiles/blob/master/.emacs.d/init.el#L22-L27">Here</a> I implement a module timer to track perfomance / load time of each custom module.
+</p>
+</div>
+</div>
+<div id="outline-container-org2749d70" class="outline-3">
+<h3 id="org2749d70"><span class="section-number-3">4.2</span> Emacs as window manager</h3>
+<div class="outline-text-3" id="text-4-2">
+<p>
+Emacs is very nearly an entire OS in it's own right. I use it as my window manager while programming for a distraction free environment tightly configured with multi-language integration.
+</p>
+</div>
+</div>
+<div id="outline-container-orgf721222" class="outline-3">
+<h3 id="orgf721222"><span class="section-number-3">4.3</span> Org Mode</h3>
+<div class="outline-text-3" id="text-4-3">
+<p>
+This portfolio is written in an org document and exported to html, to see the original org text go <a href="https://github.com/bcmertz/bcmertz.github.io/blob/master/index.org">here</a>
+</p>
 
-<div id="outline-container-orgd737b7c" class="outline-2">
-<h2 id="orgd737b7c"><span class="section-number-2">5</span> Ginger Beer</h2>
+<p>
+I use org mode to track my list of todo items, and have built in functionality like reviewing github pull requests from inside of emacs/org-mode as configured <a href="https://github.com/bcmertz/dotfiles/blob/master/.emacs.d/lisp/languages/custom-org.el#L11-L18">here</a>
+</p>
+</div>
+</div>
+<div id="outline-container-orgd960b46" class="outline-3">
+<h3 id="orgd960b46"><span class="section-number-3">4.4</span> Latex dev environment and resume</h3>
+<div class="outline-text-3" id="text-4-4">
+<p>
+Within emacs I have setup a dev environment for editing <a href="https://github.com/bcmertz/dotfiles/blob/master/.emacs.d/lisp/languages/custom-latex.el">latex</a> with automatic compilation to pdf. Checkout my <a href="https://github.com/bcmertz/resume/blob/master/resume.pdf">resume</a> written in Latex.
+</p>
+</div>
+</div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Bennett Mertz</p>
-<p class="date">Created: 2020-11-22 Sun 17:57</p>
+<p class="date">Created: 2020-11-22 Sun 18:53</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
